Add documentation Update dashboard to show partitions by lag metrics Update Prometheus and Grafana docker containers Change the 'delay' in the consumer to 25 ms

--- a/spring-kafka-consumer/src/main/resources/application.yml
+++ b/spring-kafka-consumer/src/main/resources/application.yml
@@ -35,3 +35,4 @@ management:
     tags:
       application: ${spring.application.name}
       env: local
+      consumer_group: ${spring.kafka.consumer.group-id}
