--- a/spring-kafka-producer/pom.xml
+++ b/spring-kafka-producer/pom.xml
@@ -22,9 +22,6 @@
 
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
 		<commons.math3.version>3.6.1</commons.math3.version>
-
-		<!-- https://mvnrepository.com/artifact/io.netty/netty-resolver-dns-native-macos -->
-		<netty-resolver-dns-native-macos.version>4.1.85.Final</netty-resolver-dns-native-macos.version>
 	</properties>
 	<dependencies>
 
@@ -40,7 +37,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-webflux</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
@@ -70,12 +67,6 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>io.netty</groupId>
-			<artifactId>netty-resolver-dns-native-macos</artifactId>
-			<version>${netty-resolver-dns-native-macos.version}</version>
-			<classifier>osx-aarch_64</classifier>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -83,11 +74,6 @@
 		<dependency>
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.kafka</groupId>
-			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 
