* Update to Spring Boot 3 * Update Confluent Kafka images * Improved documentation * Small improvements dashboard

--- a/.env
+++ b/.env
@@ -8,4 +8,5 @@ TZ=Europe/Amsterdam
 # Confluent Platform: 7.0.x = Apache Kafka: 3.0.x
 # Confluent Platform: 7.1.x = Apache Kafka: 3.1.x
 # Confluent Platform: 7.2.x = Apache Kafka: 3.2.x
-CONFLUENT_PLATFORM_VERSION=7.2.2
+# Confluent Platform: 7.3.x = Apache Kafka: 3.3.x
+CONFLUENT_PLATFORM_VERSION=7.3.3
